src/unit_tests/TypeChecker/fail/let-self.cl
class Main {
    main(): Int {
        let self:SELF_TYPE in 5
    };
};